welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:1: error: Boolean.type does not take parameters
def estPositionFinale() = Boolean {
                                  ^